--- a/styles/style.css
+++ b/styles/style.css
@@ -23,41 +23,36 @@
     font-family: 'Tektur', sans-serif;
 }
 .header-container{
-
-}
-.header-img{
     position: relative;
     width: 100%;
-    height: 100vh;
+    height: 110vh;
+    background-image: url(../images/banner/banner3.png);
     background-size: cover;
-    
-    
 }
 .header-title{
     position: absolute;
+    width: 380px;
     top: 216px;
     right: 230px;
-    width: 525px;
-    height: 500px;
     text-align: right;
-    
+
 }
 .header-name{
     color: #FFF;
     text-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
-    font-size: 65px;
+    font-size: 45px;
     font-weight: 700;
     margin-bottom: 20px;
 }
 .header-disc{
     color: #FFF;
-    font-size: 16px;
+    font-size: 11px;
     font-weight: 400;
     margin-bottom: 25px;
 }
-.header-btn{
-    width: 160px;
-    height: 64px;
+.primary-btn{
+    width: 140px;
+    height: 55px;
     color: #005FAC;
     text-align: center;
     font-family: Work Sans;
@@ -69,19 +64,22 @@
    
 }
 .failures{
+    position: relative;
     width: 80%;
-    height: 100%;
-    margin: 100px auto;
-   display: flex;
-   justify-content: center;
-   align-items: center;
+    height: 70vh;
+    margin: 250px auto;
+    display: flex;
+    align-items: center;
 }
 .failure-img{
-    width: 451px;
-    height: 898px;
+
+   
 }
 .faulures-container{
-    margin-left: 160px;
+    position: absolute;
+    top: 160px;
+    right: 28px;
+    margin-left: 130px;
 }
 .failure-title{
     width: 288px;
@@ -103,11 +101,55 @@ ul li{
     color: #444343;
     font-family: Work Sans;
     font-size: 16px;
-    font-weight: 400;
-    
+    font-weight: 400;   
 }
 
-.skill{
+.plan-hd{
+    color: #151414;
+    text-align: center;
+    font-family: Work Sans;
+    font-size: 40px;
+    font-weight: 700;
+
+}
+.plan-container{
+    max-width: 80%;
+    min-height: 200px;
+    margin: 10px auto;
     display: flex;
-    justify-content: center;
+    justify-content: space-evenly;
+    align-items: center;
+}
+.skill{
+   justify-content: center; 
+   text-align: center;
+   align-items: center;
+}
+.skill-img{
+    width: 80px;
+}
+/* Start mindset section */
+.mindset-container{
+    position: relative;
+    width: 80%;
+    height: 300px;
+    margin: 60px auto;
+    background-image: linear-gradient(90deg, #005FAC 0%, rgba(0, 95, 172, 0.00) 100%), url(../images/watch.png);
+    border-radius: 8px;
+    
+}
+.mindset-item{
+    position: absolute;
+    width: 450px;
+    top: 80px;
+    left: 60px;
+    color: #FFF;
+    font-family: Work Sans;
+    font-size: 20px;
+    font-style: normal;
+    font-weight: 700;
+    line-height: normal;
+}
+.mindset-item >.primary-btn{
+    margin-top: 20px;
 }
